--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>trainerforaws</groupId>
     <artifactId>latest</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     
     <dependencies>
         <!-- Define your dependencies here -->
